Update portfolio projects section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav class="nav container">
             <a class="logo" href="#top">Irene Grape</a>
             <div class="nav-links">
+                <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
                 <a href="#about">About</a>
                 <a href="https://github.com/irynagrape/" target="_blank" rel="noopener">GitHub</a>
@@ -49,6 +50,58 @@
                     <li>Implemented responsive and accessible user interfaces</li>
                     <li>Developed CRUD features, filtering, and pagination</li>
                 </ul>
+            </div>
+        </section>
+
+        <!-- PROJECTS -->
+        <section id="projects" class="section container">
+            <div class="section-head">
+                <h2>Featured Projects</h2>
+                <p>Structured as a scalable showcase: 1 live case study now, space reserved for up to 10.</p>
+            </div>
+
+            <div class="projects-showcase">
+                <article class="project-feature" aria-label="Global News Snapshot project">
+                    <div class="project-media-wrap">
+                        <img class="project-media" src="assets/projects/global-news-snapshot.png" alt="Global News Snapshot dashboard with live headline cards, filters, and keyword search" loading="lazy" />
+                        <div class="project-chip-row">
+                            <span>Live API Data</span>
+                            <span>Filterable UI</span>
+                            <span>Responsive Layout</span>
+                        </div>
+                    </div>
+
+                    <div class="project-content">
+                        <p class="project-index">Project 01 / 10</p>
+                        <h3>News API</h3>
+                        <p class="project-description">
+                            Live news dashboard with smart search and filters.
+                        </p>
+                        <div class="tags">
+                            <span>JavaScript</span>
+                            <span>REST API</span>
+                            <span>HTML/CSS</span>
+                            <span>UI Architecture</span>
+                        </div>
+                    </div>
+                </article>
+
+                <aside class="project-rail" aria-label="Future project slots">
+                    <h3>Roadmap</h3>
+                    <p>Upcoming portfolio entries will follow the same structure for clear, recruiter-friendly comparison.</p>
+                    <ol>
+                        <li>News API</li>
+                        <li>Project 02</li>
+                        <li>Project 03</li>
+                        <li>Project 04</li>
+                        <li>Project 05</li>
+                        <li>Project 06</li>
+                        <li>Project 07</li>
+                        <li>Project 08</li>
+                        <li>Project 09</li>
+                        <li>Project 10</li>
+                    </ol>
+                </aside>
             </div>
         </section>
 
