Update portfolio content, styling, project 2, and contact email

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <p>Open to junior front-end opportunities, internships, and project collaboration.</p>
             </div>
             <div class="contact-panel">
-                <a class="btn" href="mailto:irynagrape@gmail.com">Email Me</a>
+                <a class="btn" href="mailto:9692765@gmail.com">Email Me</a>
                 <a class="btn btn-ghost" href="https://github.com/irynagrape/" target="_blank" rel="noopener">GitHub Profile</a>
                 <a class="btn btn-ghost" href="https://www.linkedin.com/in/iryna-grape-9b5146311/" target="_blank" rel="noopener">LinkedIn Profile</a>
             </div>
@@ -213,7 +213,7 @@
     </main>
 
     <footer class="footer container">
-        <p>© <span id="year"></span> Irene Grape. Built with HTML/CSS/JS.</p>
+        <p>© <span id="year"></span> Irene Grape. Built with HTML/CSS/JS. <a href="mailto:9692765@gmail.com">9692765@gmail.com</a></p>
     </footer>
 
     <script src="js/index.js"></script>
