Add Project 03 (Pocket Ledger) and full-image display

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section id="projects" class="section container">
             <div class="section-head">
                 <h2>Featured Projects</h2>
-                <p>Two complete case studies with a scalable structure for additional projects.</p>
+                <p>Three complete case studies with a scalable structure for additional projects.</p>
             </div>
 
             <div class="projects-showcase">
@@ -113,6 +113,32 @@
                             </div>
                         </div>
                     </article>
+
+                    <article class="project-feature" aria-label="Pocket Ledger personal finance project">
+                        <div class="project-media-wrap">
+                            <img class="project-media project-media-full" src="assets/projects/pocket-ledger.svg" alt="Pocket Ledger dashboard showing spending, income, net balance, and category charts" loading="lazy" />
+                            <div class="project-chip-row">
+                                <span>LocalStorage Persistence</span>
+                                <span>Dashboard Charts</span>
+                                <span>CRUD + Filters</span>
+                            </div>
+                        </div>
+
+                        <div class="project-content">
+                            <p class="project-index">Project 03 / 10</p>
+                            <h3>Pocket Ledger</h3>
+                            <p class="project-description">
+                                Pocket Ledger is a lightweight personal finance web app built with vanilla HTML, CSS, and JavaScript. It lets users add and manage income and expense transactions, organize categories, filter and search records, and track monthly spending trends through dashboard charts. The app runs fully in the browser with LocalStorage, so data persists locally without any backend.
+                            </p>
+                            <div class="tags">
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JavaScript</span>
+                                <span>LocalStorage</span>
+                                <span>Data Visualization</span>
+                            </div>
+                        </div>
+                    </article>
                 </div>
 
                 <aside class="project-rail" aria-label="Future project slots">
@@ -121,7 +147,7 @@
                     <ol>
                         <li>News API</li>
                         <li>HTTP Status Codes Explainer</li>
-                        <li>Project 03</li>
+                        <li>Pocket Ledger</li>
                         <li>Project 04</li>
                         <li>Project 05</li>
                         <li>Project 06</li>
